--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint -c .eslintrc src api",
     "start-dev": "node ./node_modules/better-npm-run start-dev",
     "watch-client": "node ./node_modules/better-npm-run watch-client",
-    "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run start-dev\""
+    "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run start-dev\"",
+		"update-deps": "node_modules/.bin/salita"
   },
   "betterScripts": {
     "start-prod": {
@@ -51,8 +52,6 @@
     "express": "^4.13.3",
     "history": "^1.12.3",
     "lodash": "^3.10.1",
-    "mobservable": "^0.7.1",
-    "mobservable-react": "^0.2.0",
     "object-assign": "^4.0.1",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
@@ -61,14 +60,14 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-helmet": "^1.1.5",
-    "react-router": "^1.0.0-rc2",
+    "react-router": "^1.0.0-rc3",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
     "webpack-isomorphic-tools": "^0.9.1"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^2.3.0",
+    "assets-webpack-plugin": "^3.0.0",
     "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
@@ -81,16 +80,16 @@
     "css-loader": "^0.19.0",
     "error-stack-parser": "^1.2.3",
     "eslint": "^1.6.0",
-    "eslint-loader": "^1.0.0",
+    "eslint-loader": "^1.1.0",
     "eslint-plugin-react": "^3.5.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
-    "node-libs-browser": "^0.5.3",
     "node-sass": "^3.3.3",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
+    "salita": "^0.8.2",
     "sass-loader": "^3.0.0",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.4",
