--- a/package.json
+++ b/package.json
@@ -50,21 +50,28 @@
     "decorate-this": "^0.5.0",
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
-    "history": "^1.12.3",
+    "history": "^1.15.0",
     "lodash": "^3.10.1",
+		"lost": "^6.6.2",
     "object-assign": "^4.0.1",
     "piping": "^0.3.0",
+		"postcss-import": "^7.1.3",
+		"postcss-modules-extract-imports": "^1.0.0",
+		"postcss-modules-local-by-default": "^1.0.0",
+		"postcss-modules-scope": "^1.0.0",
+		"postcss-modules-values": "^1.1.1",
     "pretty-error": "^1.2.0",
     "query-string": "^2.4.2",
     "radium": "^0.14.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-helmet": "^1.1.5",
-    "react-router": "^1.0.0-rc3",
+    "react-router": "^1.0.1",
+		"rucksack-css": "^0.8.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
-    "webpack-isomorphic-tools": "^0.9.1"
+    "webpack-isomorphic-tools": "^2.2.21"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.0.0",
@@ -85,12 +92,14 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
-    "node-sass": "^3.3.3",
+		"postcss-loader": "^0.8.0",
+		"postcss-normalize": "^0.1.2",
+		"postcss-scss": "^0.1.3",
+		"precss": "^1.3.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
     "salita": "^0.8.2",
-    "sass-loader": "^3.0.0",
     "strip-loader": "^0.1.0",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.6",
