--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "decorate-this": "^0.5.0",
     "es6-promise": "^3.0.2",
     "express": "^4.13.3",
-    "history": "^1.15.0",
+    "history": "~1.13.x",
     "lodash": "^3.10.1",
 		"lost": "^6.6.2",
     "object-assign": "^4.0.1",
@@ -66,7 +66,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-helmet": "^1.1.5",
-    "react-router": "^1.0.1",
+    "react-router": "^1.0.2",
 		"rucksack-css": "^0.8.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
