--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start-dev": "node ./node_modules/better-npm-run start-dev",
     "watch-client": "node ./node_modules/better-npm-run watch-client",
     "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run start-dev\"",
-		"update-deps": "node_modules/.bin/salita"
+    "update-deps": "node_modules/.bin/salita"
   },
   "betterScripts": {
     "start-prod": {
@@ -52,14 +52,15 @@
     "express": "^4.13.3",
     "history": "~1.13.x",
     "lodash": "^3.10.1",
-		"lost": "^6.6.2",
+    "lost": "^6.6.2",
+    "normalize.css": "^3.0.3",
     "object-assign": "^4.0.1",
     "piping": "^0.3.0",
-		"postcss-import": "^7.1.3",
-		"postcss-modules-extract-imports": "^1.0.0",
-		"postcss-modules-local-by-default": "^1.0.0",
-		"postcss-modules-scope": "^1.0.0",
-		"postcss-modules-values": "^1.1.1",
+    "postcss-import": "^7.1.3",
+    "postcss-modules-extract-imports": "^1.0.0",
+    "postcss-modules-local-by-default": "^1.0.0",
+    "postcss-modules-scope": "^1.0.0",
+    "postcss-modules-values": "^1.1.1",
     "pretty-error": "^1.2.0",
     "query-string": "^2.4.2",
     "radium": "^0.14.1",
@@ -67,7 +68,7 @@
     "react-dom": "^0.14.0",
     "react-helmet": "^1.1.5",
     "react-router": "^1.0.2",
-		"rucksack-css": "^0.8.5",
+    "rucksack-css": "^0.8.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0",
@@ -92,10 +93,10 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.3",
-		"postcss-loader": "^0.8.0",
-		"postcss-normalize": "^0.1.2",
-		"postcss-scss": "^0.1.3",
-		"precss": "^1.3.0",
+    "postcss-loader": "^0.8.0",
+    "postcss-normalize": "^0.1.2",
+    "postcss-scss": "^0.1.3",
+    "precss": "^1.3.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
