--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.0.0",
-    "autoprefixer-loader": "^3.1.0",
+    "autoprefixer": "^6.3.1",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
