--- a/package.json
+++ b/package.json
@@ -41,71 +41,68 @@
     }
   },
   "dependencies": {
-    "axios": "^0.7.0",
-    "babel": "^5.8.23",
-    "babel-plugin-typecheck": "^1.3.0",
-    "classnames": "^2.1.5",
-    "color": "^0.10.1",
-    "compression": "^1.6.0",
+    "axios": "^0.9.0",
+    "classnames": "^2.2.3",
+    "color": "^0.11.1",
+    "compression": "^1.6.1",
     "decorate-this": "^0.5.0",
     "es6-promise": "^3.0.2",
-    "express": "^4.13.3",
-    "history": "~1.13.x",
-    "lodash": "^3.10.1",
-    "lost": "^6.6.2",
+    "express": "^4.13.4",
+    "history": "^2.0.0-rc2",
+    "lodash": "^4.0.0",
+    "lost": "^6.7.0",
     "normalize.css": "^3.0.3",
     "object-assign": "^4.0.1",
-    "piping": "^0.3.0",
     "postcss-import": "^7.1.3",
     "postcss-modules-extract-imports": "^1.0.0",
-    "postcss-modules-local-by-default": "^1.0.0",
+    "postcss-modules-local-by-default": "^1.0.1",
     "postcss-modules-scope": "^1.0.0",
     "postcss-modules-values": "^1.1.1",
-    "pretty-error": "^1.2.0",
-    "query-string": "^2.4.2",
-    "radium": "^0.14.1",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-helmet": "^1.1.5",
-    "react-router": "^1.0.2",
+    "precss": "^1.4.0",
+    "pretty-error": "^2.0.0",
+    "query-string": "^3.0.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-helmet": "^2.3.1",
+    "react-router": "^2.0.0-rc5",
     "rucksack-css": "^0.8.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
-    "serve-static": "^1.10.0",
-    "webpack-isomorphic-tools": "^2.2.21"
+    "serve-static": "^1.10.2",
+    "webpack-isomorphic-tools": "^2.2.26"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.0.0",
+    "assets-webpack-plugin": "^3.2.0",
     "autoprefixer": "^6.3.1",
-    "babel-core": "^5.8.25",
+    "babel-core": "^6.4.5",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
-    "babel-plugin-react-transform": "^1.1.1",
-    "babel-runtime": "^5.8.25",
-    "better-npm-run": "^0.0.2",
-    "clean-webpack-plugin": "^0.1.3",
-    "concurrently": "^0.1.1",
-    "css-loader": "^0.19.0",
-    "error-stack-parser": "^1.2.3",
-    "eslint": "^1.6.0",
-    "eslint-loader": "^1.1.0",
-    "eslint-plugin-react": "^3.5.1",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "file-loader": "^0.8.4",
-    "json-loader": "^0.5.3",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.0",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.3.19",
+    "better-npm-run": "^0.0.5",
+    "clean-webpack-plugin": "^0.1.6",
+    "concurrently": "^1.0.0",
+    "css-loader": "^0.23.1",
+    "error-stack-parser": "^1.3.3",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.2.0",
+    "eslint-plugin-react": "^3.16.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "piping": "^0.3.0",
     "postcss-loader": "^0.8.0",
     "postcss-normalize": "^0.1.2",
-    "postcss-scss": "^0.1.3",
-    "precss": "^1.3.0",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.1.1",
-    "salita": "^0.8.2",
-    "strip-loader": "^0.1.0",
-    "style-loader": "^0.12.4",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.4.1"
+    "salita": "^0.8.5",
+    "strip-loader": "^0.1.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
