--- a/package.json
+++ b/package.json
@@ -41,14 +41,18 @@
     }
   },
   "dependencies": {
-    "axios": "^0.9.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-register": "^6.4.3",
     "classnames": "^2.2.3",
     "color": "^0.11.1",
     "compression": "^1.6.1",
+    "css-modules-require-hook": "^2.1.0",
     "decorate-this": "^0.5.0",
     "es6-promise": "^3.0.2",
     "express": "^4.13.4",
     "history": "^2.0.0-rc2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.0.0",
     "lost": "^6.7.0",
     "normalize.css": "^3.0.3",
@@ -64,7 +68,13 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
+    "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^2.1.0",
+    "redux": "^3.0.6",
+    "redux-actions": "^0.9.0",
+    "redux-devtools": "^3.0.1",
+    "redux-thunk": "^1.0.0",
     "rucksack-css": "^0.8.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
@@ -82,6 +92,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-preset-stage-0": "^6.3.13",
+    "babel-root-import": "^3.1.0",
     "babel-runtime": "^6.3.19",
     "better-npm-run": "^0.0.5",
     "clean-webpack-plugin": "^0.1.6",
@@ -97,6 +108,8 @@
     "piping": "^0.3.0",
     "postcss-loader": "^0.8.0",
     "postcss-normalize": "^0.1.2",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
     "salita": "^0.8.5",
     "strip-loader": "^0.1.1",
     "style-loader": "^0.13.0",
