--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "start": "node ./node_modules/better-npm-run start-prod",
     "build": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
     "postinstall": "webpack --display-error-details --config webpack/prod.config.js",
-    "lint": "eslint -c .eslintrc src api",
     "start-dev": "node ./node_modules/better-npm-run start-dev",
     "watch-client": "node ./node_modules/better-npm-run watch-client",
     "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run start-dev\"",
-    "update-deps": "node_modules/.bin/salita"
+    "update-deps": "salita"
   },
   "betterScripts": {
     "start-prod": {
@@ -41,73 +40,83 @@
     }
   },
   "dependencies": {
+    "assets-webpack-plugin": "^3.2.0",
+    "autoprefixer": "^6.3.1",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.2.1",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.4.3",
+    "babel-root-import": "^3.1.0",
+    "babel-runtime": "^6.3.19",
+    "better-npm-run": "^0.0.5",
     "classnames": "^2.2.3",
+    "clean-webpack-plugin": "^0.1.6",
     "color": "^0.11.1",
     "compression": "^1.6.1",
+    "css-loader": "^0.23.1",
     "css-modules-require-hook": "^2.1.0",
     "decorate-this": "^0.5.0",
     "es6-promise": "^3.0.2",
     "express": "^4.13.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "history": "^2.0.0-rc2",
     "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
     "lodash": "^4.0.0",
     "lost": "^6.7.0",
     "normalize.css": "^3.0.3",
     "object-assign": "^4.0.1",
     "postcss-import": "^7.1.3",
+    "postcss-loader": "^0.8.0",
     "postcss-modules-extract-imports": "^1.0.0",
     "postcss-modules-local-by-default": "^1.0.1",
     "postcss-modules-scope": "^1.0.0",
     "postcss-modules-values": "^1.1.1",
+    "postcss-normalize": "^0.1.2",
+    "postcss-scss": "^0.1.3",
     "precss": "^1.4.0",
     "pretty-error": "^2.0.0",
     "query-string": "^3.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
+    "react-router": "^2.0.0-rc5",
     "rucksack-css": "^0.8.5",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.2",
-    "webpack-isomorphic-tools": "^2.2.26"
-  },
-  "devDependencies": {
-    "assets-webpack-plugin": "^3.2.0",
-    "autoprefixer": "^6.3.1",
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-root-import": "^3.1.0",
-    "babel-runtime": "^6.3.19",
-    "better-npm-run": "^0.0.5",
-    "clean-webpack-plugin": "^0.1.6",
-    "concurrently": "^1.0.0",
-    "css-loader": "^0.23.1",
-    "error-stack-parser": "^1.3.3",
-    "eslint": "^1.10.3",
-    "eslint-loader": "^1.2.0",
-    "eslint-plugin-react": "^3.16.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4",
-    "piping": "^0.3.0",
-    "postcss-loader": "^0.8.0",
-    "postcss-normalize": "^0.1.2",
-    "salita": "^0.8.5",
     "strip-loader": "^0.1.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.12",
+    "webpack-isomorphic-tools": "^2.2.26"
+  },
+  "devDependencies": {
+    "babel-preset-react-hmre": "^1.0.0",
+    "concurrently": "^1.0.0",
+    "error-stack-parser": "^1.3.3",
+    "piping": "^0.3.0",
+    "salita": "^0.8.5",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.0"
-  }
+  },
+  "bin": {
+    "daniels-react-boilerplate": "server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://danieldunderfelt@github.com/danieldunderfelt/Universal-react-boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/danieldunderfelt/Universal-react-boilerplate/issues"
+  },
+  "homepage": "https://github.com/danieldunderfelt/Universal-react-boilerplate#readme"
 }
