--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "postcss-modules-local-by-default": "^1.0.1",
     "postcss-modules-scope": "^1.0.0",
     "postcss-modules-values": "^1.1.1",
-    "postcss-normalize": "^0.1.2",
     "postcss-scss": "^0.1.3",
     "precss": "^1.4.0",
     "pretty-error": "^2.0.0",
@@ -110,6 +109,8 @@
     "concurrently": "^1.0.0",
     "error-stack-parser": "^1.3.3",
     "piping": "^0.3.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
     "salita": "^0.8.5",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.0"
