--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.4.3",
+    "babel-register": "^6.5.1",
     "babel-root-import": "^3.1.0",
     "babel-runtime": "^6.3.19",
     "better-npm-run": "^0.0.5",
@@ -88,6 +88,7 @@
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
+    "react-response": "0.0.1",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^2.1.0",
     "redux": "^3.0.6",
