--- a/package.json
+++ b/package.json
@@ -88,8 +88,9 @@
     "react-dom": "^0.14.6",
     "react-helmet": "^2.3.1",
     "react-redux": "^4.0.6",
-    "react-response": "0.0.1",
-    "react-router": "^2.0.0-rc5",
+    "react-response": "^0.1.1",
+    "react-response-router": "0.0.3",
+    "react-router": "^2.0.0",
     "react-router-redux": "^2.1.0",
     "redux": "^3.0.6",
     "redux-actions": "^0.9.0",
