--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
 	"presets": ["react", "es2015", "stage-0"],
-	"plugins": ["transform-decorators-legacy", "babel-root-import", "transform-runtime", "add-module-exports"],
-	"env": {
-		"development": {
-			"presets": []
-		}
-	}
+	"plugins": ["transform-decorators-legacy", "transform-runtime", "add-module-exports"]
 }
